Create a 'page' haml template in order to remove 'page-header' HTML elements in Markdown files

--- a/2014-09-07-lcc-108-ouaf-ouaf.md
+++ b/2014-09-07-lcc-108-ouaf-ouaf.md
@@ -97,7 +97,7 @@ Ed Burns rassure les JSF fanboys et compare le [MVC sauce JSF vs action-based MV
 [Le livre XKCD: turtules all the way down](http://xkcd.com/1416/) (zoom infini à tester)  
 Finalement, la [Spec Markdown](http://blog.codinghorror.com/standard-flavored-markdown/) dont rêvait Jeff "Coding Horror" Atwood prends forme. Quid de Asciidoc(tor) vs Markdown?  
 [Github rajoute le "split diff"](https://github.com/blog/1884-introducing-split-diffs)  
-[Sysadmins Cast](https://sysadmincasts.com) Site avec des resources intéressantes pour les(dev)ops 
+[Sysadmins Cast](https://sysadmincasts.com) Site avec des ressources intéressantes pour les(dev)ops 
 
 ##  Les mains dans le cambouis
 
@@ -110,7 +110,7 @@ Une Google Hangout pour toute la journée dans les équipes distribuées.
 ## Expérience crowdcasting
 
 Enregistrer un morceau des cast codeurs et envoyez le nous.
-On en fera un épisodes.
+On en fera un épisode.
 
 Plus d'infos sur la page [crowdcasting](http://lescastcodeurs.com/crowdcasting/).
 
