Correction de fautes d'orthographe / de grammaire (posts de 2018)

--- a/_posts/2018-04-30-lcc-188-devoxx-france-2018.md
+++ b/_posts/2018-04-30-lcc-188-devoxx-france-2018.md
@@ -7,7 +7,7 @@ mp3_length:
 tweet: En direct de Devoxx France 2018 #experimental #kahoot
 # tweet size: 91-93 -> 99-101 #######################################################################
 ---
-Cet épisode clôture Devoxx France 2018 dans un mode expérimental : un mode Ignite (avancer les slides à temps réguler sans contrôle) avec l'outil Kahoot. C'est mieux de le regarder (voir lien ci dessous). Mais si vous n'écoutez ou ne regardez pas, on ne vous en voudra pas :)
+Cet épisode clôture Devoxx France 2018 dans un mode expérimental : un mode Ignite (avancer les slides à temps réguler sans contrôle) avec l'outil Kahoot. C'est mieux de le regarder (voir lien ci-dessous). Mais si vous n'écoutez ou ne regardez pas, on ne vous en voudra pas :)
 
 Enregistré le 20 avril 2018
 
@@ -25,4 +25,4 @@ Contactez-nous via twitter <https://twitter.com/lescastcodeurs>
 sur le groupe Google <https://groups.google.com/group/lescastcodeurs>  
 ou sur le site web <https://lescastcodeurs.com/>  
 Flattr-ez nous (dons) sur <https://lescastcodeurs.com/>  
-En savoir plus sur le sponsoring? <sponsors@lescastcodeurs.com>
+En savoir plus sur le sponsoring ? <sponsors@lescastcodeurs.com>
