Correction de fautes d'orthographe / de grammaire (posts de 2017)

--- a/_posts/2017-04-11-lcc-167-devoxx-france-2017.md
+++ b/_posts/2017-04-11-lcc-167-devoxx-france-2017.md
@@ -121,4 +121,4 @@ Contactez-nous via twitter <https://twitter.com/lescastcodeurs>
 sur le groupe Google <https://groups.google.com/group/lescastcodeurs>  
 ou sur le site web <https://lescastcodeurs.com/>  
 Flattr-ez nous (dons) sur <https://lescastcodeurs.com/>  
-En savoir plus sur le sponsoring? sponsors@lescastcodeurs.com  
+En savoir plus sur le sponsoring ? [sponsors@lescastcodeurs.com](mailto:sponsors@lescastcodeurs.com)  
