--- a/_posts/2017-08-11-licence.md
+++ b/_posts/2017-08-11-licence.md
@@ -6,7 +6,7 @@ layout: blog-post
 Les épisodes des cast codeurs sont désormais publiés sous licence Creative Commons.
 Plus précisément, Creative Commons Attribution - Pas d'Utilisation Commerciale - Pas de Modification 4.0 International (CC BY-NC-ND 4.0 pour les intimes).
 Cette nouvelle licence s'applique pour les épisodes passés.
-Les détails sont disponibles sur notre page [licence](/licence/).
+Les détails sont disponibles sur notre page [licence]({% link licence.md %}).
 
 On n'avait jamais vraiment pris de décision sur la licence, ce qui ne donnait aucun droit en pratique. C'est chose faite.
 Il y a des situations où cette licence ne conviendra pas pour certains usages ou projets ;
