Correction de fautes d'orthographe / de grammaire (posts de 2016)

--- a/_posts/2016-11-05-lcc-156-tof-tof.md
+++ b/_posts/2016-11-05-lcc-156-tof-tof.md
@@ -5,7 +5,7 @@ layout: blog-post
 episode: 156
 mp3_length: 62092394
 ---
-Dans cet épisode hécatombe, ce qui reste de l'équipe se bat avec Java, son GC, macOS Sierra, déterre GWT, fait tomber des DNS, joue du yukulele, se met aux web, démine le JSON et tirade sur les tests unitaires.
+Dans cet épisode hécatombe, ce qui reste de l'équipe se bat avec Java, son GC, macOS Sierra, déterre GWT, fait tomber des DNS, joue du ukulélé, se met aux web, démine le JSON et tirade sur les tests unitaires.
 
 Enregistré le 28 octobre 2016
 
@@ -52,7 +52,7 @@ Téléchargement de l'épisode [LesCastCodeurs-Episode-156.mp3](http://traffic.
 [Retour sur la réindexation en haute dispo sur un cluster Elasticsearch](https://thoughts.t37.net/abusing-an-innocent-elasticsearch-cluster-for-a-mass-reindex-without-disturbing-your-clients-360384fca105)  
 [Debezium, change data capture 0.3.4](http://debezium.io/blog/2016/10/25/Debezium-0-3-4-Released/)
 
-* eviter la snapshot
+* éviter la snapshot
 * support du type JSON de MySQL
 
 ### Sécurité
@@ -64,10 +64,10 @@ Téléchargement de l'épisode [LesCastCodeurs-Episode-156.mp3](http://traffic.
 
 [Support de ARM dans macOS Sierra](http://www.iclarified.com/57138/apple-adds-arm-support-to-macos-sierra-kernel)
 
-* vous acheteriez un ordi à base de ARM ?
+* vous achèteriez un ordi à base de ARM ?
 
 Le prochain MacBook Pro sans touche Escape: vim, nooooooooooon !  
-[Yukulele: layout de clavier pour macOS](http://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=ukelele)  
+[Ukelele : layout de clavier pour macOS](http://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=ukelele)  
 
 [git worktree](https://git-scm.com/docs/git-worktree)  
 [GitHub vous laisse faire un rebase d'une pull request](https://github.com/blog/2243-rebase-and-merge-pull-requests)  
@@ -87,14 +87,14 @@ Le prochain MacBook Pro sans touche Escape: vim, nooooooooooon !
 
 ## Rubrique du débutant
 
-Qu'est ce qu'un [test unitaire](https://en.wikipedia.org/wiki/Unit_testing) ?
+Qu'est-ce qu'un [test unitaire](https://en.wikipedia.org/wiki/Unit_testing) ?
 
 ## Conférences
 
 [Codeurs en Seine](http://www.codeursenseine.com) le jeudi 24 novembre (avec des ateliers le 26 novembre)  
 [DevFest Nantes](https://devfest.gdgnantes.com) les 9 et 10 novembre à Nantes.  
 [Devoxx Belgique du 7 au 11 novembre](https://devoxx.be)  
-[Snowcamp les 8-10 fevrier](http://snowcamp.io)  
+[Snowcamp les 8-10 février](http://snowcamp.io)  
 
 ## Nous contacter
 
@@ -103,4 +103,4 @@ Contactez-nous via twitter <https://twitter.com/lescastcodeurs>
 sur le groupe Google <https://groups.google.com/group/lescastcodeurs>  
 ou sur le site web <https://lescastcodeurs.com/>  
 Flattr-ez nous (dons) sur <https://lescastcodeurs.com/>  
-En savoir plus sur le sponsoring? sponsors@lescastcodeurs.com  
+En savoir plus sur le sponsoring ? [sponsors@lescastcodeurs.com](mailto:sponsors@lescastcodeurs.com)  
