Correction de fautes d'orthographe / de grammaire (posts de 2014)

--- a/_posts/2014-09-07-lcc-108-ouaf-ouaf.md
+++ b/_posts/2014-09-07-lcc-108-ouaf-ouaf.md
@@ -83,7 +83,7 @@ Ed Burns rassure les JSF fanboys et compare le [MVC sauce JSF vs action-based MV
 
 [Ne faites pas ce que vous aimez](https://medium.com/@rachelnabors/dont-do-what-you-love-41312c943e2)  
 [L'Oregon attaque Oracle en justice](http://news.yahoo.com/oregon-sues-oracle-claiming-fraud-over-failed-obamacare-213323763--finance.html)  
-[This is why you never end up hiring good developers](http://qz.com/258066/this-is-why-you-dont-hire-good-developers/) donne des clefs intéressantes sur ce qu'il faut (ne pas) faire pour faire passer un entretien à un futur developpeur  
+[This is why you never end up hiring good developers](http://qz.com/258066/this-is-why-you-dont-hire-good-developers/) donne des clefs intéressantes sur ce qu'il faut (ne pas) faire pour faire passer un entretien à un futur développeur  
 
 ###  Divers
 
@@ -109,7 +109,7 @@ Une Google Hangout pour toute la journée dans les équipes distribuées.
 
 ## Expérience crowdcasting
 
-Enregistrer un morceau des cast codeurs et envoyez le nous.
+Enregistrer un morceau des cast codeurs et envoyez-le-nous.
 On en fera un épisode.
 
 Plus d'infos sur la page [crowdcasting](http://lescastcodeurs.com/crowdcasting/).
@@ -133,4 +133,4 @@ Contactez-nous via twitter <http://twitter.com/lescastcodeurs>
 sur le groupe Google <http://groups.google.com/group/lescastcodeurs>  
 ou sur le site web <http://lescastcodeurs.com/>  
 Flattr-ez nous (dons) sur <http://lescastcodeurs.com/>  
-En savoir plus sur le sponsoring? sponsors@lescastcodeurs.com
+En savoir plus sur le sponsoring ? [sponsors@lescastcodeurs.com](mailto:sponsors@lescastcodeurs.com)
