--- a/_posts/2011-07-01-8884.md
+++ b/_posts/2011-07-01-8884.md
@@ -7,7 +7,7 @@ Je ne sais pas si vous vous souvenez, mais il y a tout juste un an, les Cast Cod
 [la barre des 4000 téléchargements](http://lescastcodeurs.com/2010/06/les-cast-codeurs-explosent-la-barre-des-4000/)
 par mois.
 
-Et bien ce mois ci, on a explosé la barre des 8000 téléchargements et frôlé les 9000 puisqu'au mois de juin, 
+Eh bien ce mois-ci, on a explosé la barre des 8000 téléchargements et frôlé les 9000 puisqu'au mois de juin, 
 les serveurs ont vu **8884 téléchargements**.
 
 Merci à tous de nous suivre dans cette aventure depuis plus de deux ans.
