Ajout de Github qui sécurise npmjs.com

--- a/_posts/2021-12-20-lcc-269-la-la-log4j.md
+++ b/_posts/2021-12-20-lcc-269-la-la-log4j.md
@@ -1,7 +1,7 @@
 ---
 title: LCC 269 - 
 author: 'Emmanuel Bernard'
-team: 'Emmanuel Bernard, Guillaume Laforge, Vincent Massol, Antonio Goncalves, Arnaud Héritier, Audrey Neveu'
+team: 'Guillaume Laforge, Antonio Goncalves'
 layout: blog-post
 episode: 269
 mp3_length: ???
@@ -15,6 +15,14 @@ Enregistré le 20 novembre 2021
 Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffic.libsyn.com/lescastcodeurs/LesCastCodeurs-Episode-269.mp3)
 
 ## News
+
+[Décès de Stéphane Maldini](https://twitter.com/glaforge/status/1470729181050937346) (14 Dec 2021)
+
+* Une triste nouvelle pour commencer l'épisode avec l'annonce du décès soudain de Stéphane Maldini
+* Un acteur de l'écosystème Grails à la fin des années 2000, gràce à de nombreux plugins
+* Mais plus connu pour avoir co-fondé le project Reactor, et popularisé le Reactive Programming au sein de la communauté Java
+* Egalement à l'origine de R2DBC pour rendre l'accès aux bases de données plus réactif
+* Après de nombreuses années chez Pivotal, il avait rejoint plus récemment Netflix, et c'est peut-être en partie grâce à lui que vous pouviez matter plein de séries !
 
 ### Langages
 
@@ -35,11 +43,27 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 
 ### Librairies
 
+[Github collabore à la sécurité des packages NPM](https://github.blog/2021-11-15-githubs-commitment-to-npm-ecosystem-security/) 15 Nov 2021
+
+* Github est un des stewards du registre des packages NPM
+* Github partage des détails sur les incidents de sécurités récents
+    * malware injectés récemment dans `ua-parser-js`, `coa`, et `rc` car un tiers avait réussit à usurper le compte d'un contributeur
+    * temporairement, les packages privées étaient potentiellement découvrables sur le réplicats de npmjs.com
+    * une faille qui a été découverte grâce à un bug bounty qui permettait de publier des versions de certains modules avec des comptes mal-sécurisés
+* Github investit dans la sécurité, en particulier en rendant obligatoire la 2-factor-authentication pour les administrateurs et admins des packages les plus populaires hébergés sur Github, en rajoutant de la détection de malware automatique
+
 ### Infrastructure
 
 
 
 ### Cloud
+
+
+
+[Le runtime Java pour Google App Engine en Open Source](https://twitter.com/glaforge/status/1471485040005550080) 16 Dec 2021
+
+* Toujours dans un esprit d'ouverture pour éviter le lock-in, Ludovic Champenois qui dirige le runtime Java de Google App Engine Java a open sourcé les sources du runtime, du SDK.
+
 
 
 ### Web
