Sortie de Spring Boot 2.6

--- a/_posts/2021-12-20-lcc-269-la-la-log4j.md
+++ b/_posts/2021-12-20-lcc-269-la-la-log4j.md
@@ -43,6 +43,19 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 
 ### Librairies
 
+[Nouvelle paire de bottes 2.6 pour Spring Boot](https://spring.io/blog/2021/11/19/spring-boot-2-6-is-now-available) (19 Nov 2021)
+
+* Support des attributs SameSite sur les cookies de session cookies pour les applications à base de servlet
+* Support pour configurer les health groups sur le port principal ou de management
+* Amélioration du endpoint `/info` avec des infos sur le runtime Java
+* Support pour tester les applis Spring MVC en utilisant `WebTestClient`
+* Auto-configuration de `spring-rabbit-stream`
+* Support pour des règles personnalisées de nettoyage/filtrage des propriétés dans `/env` et `configprops`
+
+
+
+### Infrastructure
+
 [Github collabore à la sécurité des packages NPM](https://github.blog/2021-11-15-githubs-commitment-to-npm-ecosystem-security/) 15 Nov 2021
 
 * Github est un des stewards du registre des packages NPM
@@ -51,10 +64,6 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
     * temporairement, les packages privées étaient potentiellement découvrables sur le réplicats de npmjs.com
     * une faille qui a été découverte grâce à un bug bounty qui permettait de publier des versions de certains modules avec des comptes mal-sécurisés
 * Github investit dans la sécurité, en particulier en rendant obligatoire la 2-factor-authentication pour les administrateurs et admins des packages les plus populaires hébergés sur Github, en rajoutant de la détection de malware automatique
-
-### Infrastructure
-
-
 
 ### Cloud
 
