--- a/_posts/2021-12-20-lcc-269-la-la-log4j.md
+++ b/_posts/2021-12-20-lcc-269-la-la-log4j.md
@@ -41,6 +41,25 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 * Kover, un nouveau plugin de couverture de code pour Kotlin/JVM, utilisable avec un plugin Gradle, compatible avec JaCoCo
 * Le Kotlin Symbol Processor, KSP, drivé par Google, est maintenant stable, plus rapide, plus ergonomique d'utilisation (remplace Kapt)
 
+[Groovy 4, on y est presque !](http://groovy-lang.org/releasenotes/groovy-4.0.html)
+
+* Sortie de la release candidate de Groovy 4, la finale est proche !
+* Changement des coordonnées Maven pour passer à `org.apache.groovy` (bye bye Codehaus)
+* Suppression de vieilles coordonnées de packages ou classes mal-situées, à cause des modules Java (XmlSlurper, XmlParser, AntBuilder, GroovyTestCase)
+* Le module `groovy-yaml` est rajouté au pom `groovy-all` et le module `groovy-testng` devient optionel
+* Le vieux parseur basé sur Antlr2 est supprimé, et le parseur ("parrot") introduit dans Groovy 3 reste le seul parseur
+* Le bytecode généré n'utilise plus que l'instruction invokeDynamic partout où c'est possible
+* Support des expressions `switch`
+* Support des sealed types
+* Incubation du support des records
+* Inclusion de type-checkers, par exemple avec le premier pour valider les expressions régulières à la compilation
+* Inclusion de macro pour faciliter le débuggage
+* Intégration de JavaShell dans la console Groovy pour facilier les expérimentations cross language
+* Nouvelle annotation @POJO pour créer des POJO Java, sans la surchage de bytecode spécifique à Groovy (pratique pour la compilation statique)
+* Incubation de design by contract avec l'intégration de l'ancien module gcontracts
+* GINQ (Groovy Integrated Query) qui propose un langage proche de SQL, similaire à LINQ en .Net, pour facilier le travail avec les collections
+* Incubation du support pour le langage de configuration TOML
+
 ### Librairies
 
 [Nouvelle paire de bottes 2.6 pour Spring Boot](https://spring.io/blog/2021/11/19/spring-boot-2-6-is-now-available) (19 Nov 2021)
