Ajout de JetBrains Fleet

--- a/_posts/2021-12-20-lcc-269-la-la-log4j.md
+++ b/_posts/2021-12-20-lcc-269-la-la-log4j.md
@@ -104,6 +104,17 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 
 ### Outillage
 
+[JetBrains annonce Fleet un nouvel IDE](https://www.jetbrains.com/fleet/)
+
+* Developpé from scratch
+* Basé sur l’experience de 20 ans à developer des IDEs
+* Fleet utilises le code-processing d’IntelliJ (polyglot)
+* Nouvelle interface graphique
+* Basé sur la librairie graphique 2D Skit (utilisée dans Chrome, Flutter, Android, Firefox...)
+* Rapide et léger (démarre en quelques secondes)
+* Architecture distribuée (tourne sur le PC, remote PC, dans le Cloud)
+* Early Preview, pas encore accessible publiquement à tout le monde
+
 
 ### Méthodologies
 
