Outillage, rajouts sur le CSS

--- a/_posts/2021-12-20-lcc-269-la-la-log4j.md
+++ b/_posts/2021-12-20-lcc-269-la-la-log4j.md
@@ -24,6 +24,8 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 * Egalement à l'origine de R2DBC pour rendre l'accès aux bases de données plus réactif
 * Après de nombreuses années chez Pivotal, il avait rejoint plus récemment Netflix, et c'est peut-être en partie grâce à lui que vous pouviez matter plein de séries !
 
+[CloudBees clot un tour de table de 150 millions de dollars valorisant l'entreprise à 1 milliards de dollars](https://twitter.com/cloudbees/status/1468943708330643457?s=21) 
+
 ### Langages
 
 [Kotlin à l'assaut du K2 avec son nouveau compilo](https://www.infoq.com/news/2021/11/jetbrains-k2-compiler-kotlin/) (11 Nov 2021)
@@ -71,8 +73,6 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 * Auto-configuration de `spring-rabbit-stream`
 * Support pour des règles personnalisées de nettoyage/filtrage des propriétés dans `/env` et `configprops`
 
-
-
 ### Infrastructure
 
 [Github collabore à la sécurité des packages NPM](https://github.blog/2021-11-15-githubs-commitment-to-npm-ecosystem-security/) 15 Nov 2021
@@ -86,17 +86,29 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 
 ### Cloud
 
-
-
 [Le runtime Java pour Google App Engine en Open Source](https://twitter.com/glaforge/status/1471485040005550080) 16 Dec 2021
 
 * Toujours dans un esprit d'ouverture pour éviter le lock-in, Ludovic Champenois qui dirige le runtime Java de Google App Engine Java a open sourcé les sources du runtime, du SDK.
 
 
-
 ### Web
 
+[CSS défensif](https://ishadeed.com/article/defensive-css/) (7 Dec 2021)
 
+* Ahmad Shadeed partage de bonnes pratiques CSS, comment écrire du CSS propre, sans comportement bizarroïde suivant les navigateurs, ou qui réponds bien de manière responsive
+* Avec des exemples sur l'utilisation de Flexbox, de l'espacement, la gestion du contenu long (et donc du clipping), de l'apparence des images suivant la taille de la fenêtre, les média queries en vertical, le text au-dessus des images, la gestion des scrollbars.
+
+[Le custom CSS Reset de Josh Comeau](https://www.joshwcomeau.com/css/custom-css-reset/) (23 Nov 2021)
+
+* Josh Comeau partage une nouvelle version de CSS Reset, non-opionated pour ce qui est design et cosmétique, mais qui prends certains partis pris (par exemple de l'italique reste italique)
+* Couvre en détail chaque aspect : le box-sizing, les marges par défaut, la hauteur de ligne, des hauteurs basées sur les pourcentages, rendre les polices antialiasées, le word wrapping pour la gestion du retour à la ligne
+
+[Google Fonts propose des articles sur l'utilisation des polices de caractères](https://fonts.google.com/knowledge) (7 Dec 2021)
+
+* [Elliot Jay Stocks](https://elliotjaystocks.com/blog/google-fonts-knowledge) a participé à la base de connaissance et d'articles du Google Fonts Knowledge
+* Introduction à la typographie, comment choisir une bonne interligne, comprendre les mesures des caractères et des lignes
+* Comment choisir une typographie et une police de caractères
+* Un glossaire sur les termes relatifs aux polices de caractères, à la typographie
 
 ### Data
 
@@ -104,7 +116,7 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 
 ### Outillage
 
-[JetBrains annonce Fleet un nouvel IDE](https://www.jetbrains.com/fleet/)
+[JetBrains annonce Fleet un nouvel IDE](https://www.jetbrains.com/fleet/) (29 Nov 2021)
 
 * Developpé from scratch
 * Basé sur l’experience de 20 ans à developer des IDEs
@@ -115,6 +127,12 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 * Architecture distribuée (tourne sur le PC, remote PC, dans le Cloud)
 * Early Preview, pas encore accessible publiquement à tout le monde
 
+[Mac: display_manager et Rectangle](https://twitter.com/glaforge/status/1465284619469742083) (29 Nov 2021)
+
+* [display_manager](https://github.com/univ-of-utah-marriott-library-apple/display_manager) permet de scripter en ligne de commande la configuration des resolutions des écrans (interne ou externe), de changer la luminositer, la densité de pixel, la fréquence de raffraichissement
+* [Rectangle](https://rectangleapp.com/) : cette petite application propose des raccourcis claviers pour positionner et retailler les fenêtres, pour les mettre rapidement en plein écran, à gauche/à droite, en quart, en tiers
+* [Hammerspoon](https://www.hammerspoon.org/) qui permet d'automatiser mac OS, en rajoutant des raccourcis clavier, en réagissant à des événements comme le branchement d'un appareil sur un port USB, le fait de rejoindre un réseau Wifi
+
 
 ### Méthodologies
 
@@ -122,6 +140,9 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 
 ### Loi, société et organisation
 
+[Un document du FBI liste les données des messageries chiffrées pouvant être récupérées](https://therecord.media/fbi-document-shows-what-data-can-be-obtained-from-encrypted-messaging-apps/) (30 Nov 2021)
+
+* Même si le contenu des messages n'est pas récupérable, des informations de type méta-données peuvent l'être (date de dernière connection ou de création du compte, avatar, clé publique ou token, nombre de messages postés)
 
 ## Conférences
 
