Ajout du Micronaut 3.2

--- a/_posts/2021-12-20-lcc-269-la-la-log4j.md
+++ b/_posts/2021-12-20-lcc-269-la-la-log4j.md
@@ -73,6 +73,20 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 * Auto-configuration de `spring-rabbit-stream`
 * Support pour des règles personnalisées de nettoyage/filtrage des propriétés dans `/env` et `configprops`
 
+[Micronaut 3.2](https://micronaut.io/2021/11/23/micronaut-framework-3-2-released/) (23 Nov 2021)
+
+* Nouvelle version de Micronaut
+* Passage de GraalVM à la version 21.3 avec le support de JDK 17 (il faut maintenant développer a minima avec la distribution GraalVM JDK 11 et non plus 8)
+* Version 3 du plugin GraalVM pour Gradle
+* Support de Kotlin 1.6
+* Fonctionnalités HTTP
+    * Annotation @JsonView sur les paramètres annotés @Body
+    * Timeout configurable pour le handshake SSL
+    * Support amélioré du server push HTTP/2 pour envoyer les resources en parallèle
+    * Amélioration WebSocket avec le paramètre WebSocketPongMessage pour l'annotation @OnMessage pour répondre au Ping des WebSockets
+    * Support du protocole WS/WSS des WebSockets
+* Différentes mises à jour des modules fonctionnels (Data, Security, Reactive, OpenAPI, Kubernetes, ElasticSearch)
+
 ### Infrastructure
 
 [Github collabore à la sécurité des packages NPM](https://github.blog/2021-11-15-githubs-commitment-to-npm-ecosystem-security/) 15 Nov 2021
