Ajouts anti-pattern docker

--- a/_posts/2021-12-20-lcc-269-la-la-log4j.md
+++ b/_posts/2021-12-20-lcc-269-la-la-log4j.md
@@ -89,7 +89,7 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 
 ### Infrastructure
 
-[Github collabore à la sécurité des packages NPM](https://github.blog/2021-11-15-githubs-commitment-to-npm-ecosystem-security/) 15 Nov 2021
+[Github collabore à la sécurité des packages NPM](https://github.blog/2021-11-15-githubs-commitment-to-npm-ecosystem-security/) (15 Nov 2021)
 
 * Github est un des stewards du registre des packages NPM
 * Github partage des détails sur les incidents de sécurités récents
@@ -98,9 +98,26 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
     * une faille qui a été découverte grâce à un bug bounty qui permettait de publier des versions de certains modules avec des comptes mal-sécurisés
 * Github investit dans la sécurité, en particulier en rendant obligatoire la 2-factor-authentication pour les administrateurs et admins des packages les plus populaires hébergés sur Github, en rajoutant de la détection de malware automatique
 
+[Jérôme Petazzoni et les anti-patterns Docker](http://jpetazzo.github.io/2021/11/30/docker-build-container-images-antipatterns/) (30 Nov 2021)
+
+* Jérôme partage une liste d'anti-patterns qu'il voit fréquemment quand il aide les gens à construire leurs images de conteneur
+* Parmi les anti-patterns :
+    * les trop grosses images, comment les optimiser, comment monter des voluments plutôt que d'inclure de gros dataset dans l'image
+    * les trop petites images, mais attention car parfois on ne peut pas investiguer plus finement ce qui s'y passe
+    * utilisation de zip et tar, mieux vaut éviter de compresser pour ne pas utiliser trop de CPU ou d'espace dans l'image
+    * re-builder les bases communes : autant mettre l'image de base dans un registry, plutôt que de la re-construire à chaque fois
+    * construire l'image à partir d'un monorépo géant et comment organiser ses sources et la localisation de son Dockerfile avec chaque projet
+    * ne pas utiliser BuildKit
+    * avoir besoin de rebuilder pour chaque changement minime
+    * utiliser des scripts customs au lieu des outils existants comme Compose, Skaffold, Tilt et faire ses propres sh
+    * obliger les gens à faire tourner certaines choses dans des conteneurs alors que ça peut très bien tourner en local sur la machine du développeur
+    * utilisation d'outil trop complexes, autant utiliser des outils appropriés
+    * conflit de noms entre scripts et images
+    * builder dans des Dockerfiles
+
 ### Cloud
 
-[Le runtime Java pour Google App Engine en Open Source](https://twitter.com/glaforge/status/1471485040005550080) 16 Dec 2021
+[Le runtime Java pour Google App Engine en Open Source](https://twitter.com/glaforge/status/1471485040005550080) (16 Dec 2021)
 
 * Toujours dans un esprit d'ouverture pour éviter le lock-in, Ludovic Champenois qui dirige le runtime Java de Google App Engine Java a open sourcé les sources du runtime, du SDK.
 
