Rapport spring migration to the cloud

--- a/_posts/2021-12-20-lcc-269-la-la-log4j.md
+++ b/_posts/2021-12-20-lcc-269-la-la-log4j.md
@@ -121,6 +121,37 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 
 * Toujours dans un esprit d'ouverture pour éviter le lock-in, Ludovic Champenois qui dirige le runtime Java de Google App Engine Java a open sourcé les sources du runtime, du SDK.
 
+[Azure : comment les développeurs migrent leurs applis Spring Boot dans le Cloud](https://techcommunity.microsoft.com/t5/apps-on-azure-blog/2021-report-how-developers-migrate-spring-apps-to-the-cloud/ba-p/3021421) (2 Dec 2021)
+
+* Cible en majorité Kubernetes, 2x plus que sur des VMs
+* Challenges spécifiques Spring rencontrés
+    * Passer d'un monolith à une version cloud-friendly
+    * Migrer d'anciennes versions des composants Spring Cloud
+    * Migrer d'anciennes versions de Spring Boot
+    * Migrer de servelets vers Boot
+* Migration de Java vers Spring Boot
+    * Java vers Boot
+    * Java EE vers Boot
+    * Spring Framework vers Spring Boot
+    * Mainframe vers Spring
+* Challenges spécifiques au Cloud
+    * Migration de base de données
+    * Monitoring end-to-end
+* Outils d'APM les plus fréquents
+    * Outils du provider cloud
+    * Prometheus
+    * Dynatrace
+    * AppDynamics
+* End-to-End monitoring
+    * Splunk
+    * Elastic
+    * Outil du provider cloud
+* Composants Spring les plus fréquemment utilisés
+    * Spring Cloud Config Server
+    * Spring Cloud Gateway
+    * Spring Cloud Service Registry
+    * Spring Cloud Load Balancer
+    * Spring Cloud Circuit Breaker (Resilience4J)
 
 ### Web
 
