Trisha's december news

--- a/_posts/2021-12-20-lcc-269-la-la-log4j.md
+++ b/_posts/2021-12-20-lcc-269-la-la-log4j.md
@@ -62,6 +62,8 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 * GINQ (Groovy Integrated Query) qui propose un langage proche de SQL, similaire à LINQ en .Net, pour facilier le travail avec les collections
 * Incubation du support pour le langage de configuration TOML
 
+[Trisha Gee partage ses nouvelles Java annotés pour le mois de Décembre](https://blog.jetbrains.com/idea/2021/12/java-annotated-monthly-december-2021/) (3 Dec 2021)
+
 ### Librairies
 
 [Nouvelle paire de bottes 2.6 pour Spring Boot](https://spring.io/blog/2021/11/19/spring-boot-2-6-is-now-available) (19 Nov 2021)
