Article de Cédric sur inheritance/composition de Gradle et Maven

--- a/_posts/2021-12-20-lcc-269-la-la-log4j.md
+++ b/_posts/2021-12-20-lcc-269-la-la-log4j.md
@@ -89,6 +89,13 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
     * Support du protocole WS/WSS des WebSockets
 * Différentes mises à jour des modules fonctionnels (Data, Security, Reactive, OpenAPI, Kubernetes, ElasticSearch)
 
+[Cédric Champeau compare Gradle et Maven niveau composition et héritage](https://melix.github.io/blog/2021/12/composition-in-gradle.html) (1 Dec 2021)
+
+* Gradle et Maven prennent l'approche de "convention over configuration"
+* Couvre les approches différentes entre Gradle et Maven : Maven prends une approche plutôt héritage, tandis que Gradle l'approche compisition
+* Les plugins Gradle sont plus faciles à maintenir grâce à la composition et permet de créer ses propres convetions
+
+
 ### Infrastructure
 
 [Github collabore à la sécurité des packages NPM](https://github.blog/2021-11-15-githubs-commitment-to-npm-ecosystem-security/) (15 Nov 2021)
