--- a/_posts/2021-12-20-lcc-269-la-la-log4j.md
+++ b/_posts/2021-12-20-lcc-269-la-la-log4j.md
@@ -26,6 +26,18 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 
 [CloudBees clot un tour de table de 150 millions de dollars valorisant l'entreprise à 1 milliards de dollars](https://twitter.com/cloudbees/status/1468943708330643457?s=21) 
 
+[Le feuilleton Log4J2](https://www.lunasec.io/docs/blog/log4j-zero-day/) (9 Dec 2021)
+
+* Grosse faille de sécurité liée à l'utilisation des versions <2.15 de Log4J2
+* Découverte par un chercheur en sécurité d'Alibaba Cloud
+* [Détails](https://www.lunasec.io/docs/blog/log4j-zero-day/) publiés par LunaSec
+* Log4J2 permet de faire de l'interpollation de texte en remplaçant des parties variables d'un message à logguer
+* Hors il est possible d'ajouter des appels à des informations JNDI provenant d'un serveur LDAP
+* Un serveur LDAP peut retourner une classe compilée que JNDI va executer en local lorsque Log4J2 va vouloir insérer l'information JNDI
+* Donc potentiellement, la classe distante executée localement pourra exfiltrer des données, avoir accès aux processus qui tournent, etc.
+* Log4J2 a été patché rapidement, mais d'autres [failles](https://www.lunasec.io/docs/blog/log4j-zero-day-update-on-cve-2021-45046/) sont apparues
+* Différentes stratégies de mitigations ont été publiées
+
 ### Langages
 
 [Kotlin à l'assaut du K2 avec son nouveau compilo](https://www.infoq.com/news/2021/11/jetbrains-k2-compiler-kotlin/) (11 Nov 2021)
