Correction de quelques typos

--- a/_posts/2021-12-20-lcc-269-la-la-log4j.md
+++ b/_posts/2021-12-20-lcc-269-la-la-log4j.md
@@ -179,8 +179,8 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 
 [CSS défensif](https://ishadeed.com/article/defensive-css/) (7 Dec 2021)
 
-* Ahmad Shadeed partage de bonnes pratiques CSS, comment écrire du CSS propre, sans comportement bizarroïde suivant les navigateurs, ou qui réponds bien de manière responsive
-* Avec des exemples sur l'utilisation de Flexbox, de l'espacement, la gestion du contenu long (et donc du clipping), de l'apparence des images suivant la taille de la fenêtre, les média queries en vertical, le text au-dessus des images, la gestion des scrollbars.
+* Ahmad Shadeed partage de bonnes pratiques CSS, comment écrire du CSS propre, sans comportement bizarroïde suivant les navigateurs, ou qui répond bien de manière responsive
+* Avec des exemples sur l'utilisation de Flexbox, de l'espacement, la gestion du contenu long (et donc du clipping), de l'apparence des images suivant la taille de la fenêtre, les média queries en vertical, le texte au-dessus des images, la gestion des scrollbars.
 
 [Le custom CSS Reset de Josh Comeau](https://www.joshwcomeau.com/css/custom-css-reset/) (23 Nov 2021)
 
@@ -190,7 +190,7 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 [Google Fonts propose des articles sur l'utilisation des polices de caractères](https://fonts.google.com/knowledge) (7 Dec 2021)
 
 * [Elliot Jay Stocks](https://elliotjaystocks.com/blog/google-fonts-knowledge) a participé à la base de connaissance et d'articles du Google Fonts Knowledge
-* Introduction à la typographie, comment choisir une bonne interligne, comprendre les mesures des caractères et des lignes
+* Introduction à la typographie, comment choisir une bonne taille d'interligne, comprendre les mesures des caractères et des lignes
 * Comment choisir une typographie et une police de caractères
 * Un glossaire sur les termes relatifs aux polices de caractères, à la typographie
 
@@ -204,17 +204,17 @@ Téléchargement de l’épisode [LesCastCodeurs-Episode-269.mp3](https://traffi
 
 * Developpé from scratch
 * Basé sur l’experience de 20 ans à developer des IDEs
-* Fleet utilises le code-processing d’IntelliJ (polyglot)
+* Fleet utilise le code-processing d’IntelliJ (polyglot)
 * Nouvelle interface graphique
-* Basé sur la librairie graphique 2D Skit (utilisée dans Chrome, Flutter, Android, Firefox...)
+* Basé sur la librairie graphique 2D Skia (utilisée dans Chrome, Flutter, Android, Firefox...)
 * Rapide et léger (démarre en quelques secondes)
 * Architecture distribuée (tourne sur le PC, remote PC, dans le Cloud)
 * Early Preview, pas encore accessible publiquement à tout le monde
 
 [Mac: display_manager et Rectangle](https://twitter.com/glaforge/status/1465284619469742083) (29 Nov 2021)
 
-* [display_manager](https://github.com/univ-of-utah-marriott-library-apple/display_manager) permet de scripter en ligne de commande la configuration des resolutions des écrans (interne ou externe), de changer la luminositer, la densité de pixel, la fréquence de raffraichissement
-* [Rectangle](https://rectangleapp.com/) : cette petite application propose des raccourcis claviers pour positionner et retailler les fenêtres, pour les mettre rapidement en plein écran, à gauche/à droite, en quart, en tiers
+* [display_manager](https://github.com/univ-of-utah-marriott-library-apple/display_manager) permet de scripter en ligne de commande la configuration des résolutions des écrans (interne ou externe), de changer la luminositer, la densité de pixel, la fréquence de raffraichissement
+* [Rectangle](https://rectangleapp.com/) : cette petite application propose des raccourcis clavier pour positionner et retailler les fenêtres, pour les mettre rapidement en plein écran, à gauche/à droite, en quart, en tiers
 * [Hammerspoon](https://www.hammerspoon.org/) qui permet d'automatiser mac OS, en rajoutant des raccourcis clavier, en réagissant à des événements comme le branchement d'un appareil sur un port USB, le fait de rejoindre un réseau Wifi
 
 
