Suppession des paramètres UTM des liens

--- a/_posts/2014-09-07-lcc-108-ouaf-ouaf.md
+++ b/_posts/2014-09-07-lcc-108-ouaf-ouaf.md
@@ -20,7 +20,7 @@ Téléchargement de l'épisode [LesCastCodeurs-Episode-108.mp3](http://traffic.
 
 #### Scala
 
-[Le futur de Scala](http://www.infoq.com/news/2014/08/future-of-scala?utm_campaign=infoq_content&utm_source=infoq&utm_medium=feed&utm_term=global)  
+[Le futur de Scala](http://www.infoq.com/news/2014/08/future-of-scala)  
 [Un fork de Scala](http://typelevel.org/blog/2014/09/02/typelevel-scala.html)  
 [Réponse de TypeSafe](http://typesafe.com/blog/typesafes-commitment-to-the-scala-ecosystem)  
 
@@ -64,7 +64,7 @@ Ed Burns rassure les JSF fanboys et compare le [MVC sauce JSF vs action-based MV
 
 ###  Cloud
 
-[OpenShift dans une VM](http://blog.arungupta.me/2014/08/cloud-in-box-openshift-online-virtualbox-techtip46/?utm_source=feedburner&utm_medium=feed&utm_campaign=Feed%3A+MilesToGo+%28Miles+to+go+2.0%29)  
+[OpenShift dans une VM](http://blog.arungupta.me/2014/08/cloud-in-box-openshift-online-virtualbox-techtip46/)  
 [Google BigQuery et la plus grosse base de données d'événements](http://googlecloudplatform.blogspot.fr/2014/05/worlds-largest-event-dataset-now-publicly-available-in-google-bigquery.html?m=1)  
 
 ### Mobile
