--- a/_posts/2016-11-05-lcc-156-tof-tof.md
+++ b/_posts/2016-11-05-lcc-156-tof-tof.md
@@ -79,7 +79,7 @@ Le prochain MacBook Pro sans touche Escape: vim, nooooooooooon !
 
 [L'état et la livraison du code source en papier](http://www.numerama.com/politique/202411-contraint-de-communiquer-un-code-source-letat-lenvoie-sur-du-papier.html)  
 [Les contrats Open-Bar bloquent le développement des PMEs françaises du logiciel](http://blog.ludovic.org/xwiki/bin/view/Blog/ContratsOpenBar)  
-[Google, Wikipedia et bien d'autres sites bloqués pour apologie du terrorisme chez Orange](http://www.nextinpact.com/news/101786-google-fr-bloque-pour-apologie-terrorisme-orange-invoque-erreur-humaine.htm?utm_source=dlvr.it&utm_medium=twitter&utm_campaign=nextinpact) 
+[Google, Wikipedia et bien d'autres sites bloqués pour apologie du terrorisme chez Orange](http://www.nextinpact.com/news/101786-google-fr-bloque-pour-apologie-terrorisme-orange-invoque-erreur-humaine.htm) 
 
 ## Outils de l'épisode
 
